BugFix: ellipsis background image stretches now

--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,8 @@ body {
     left: 0;
     right: 0;
     margin: auto;
-    background-size: contain;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 #quotation {
